Add result_type field to TimingStats and DatafeedTimingStats documents