@@ -198,7 +198,8 @@ public class GetDatafeedsStatsAction extends ActionType<GetDatafeedsStatsAction.
                     builder.field(
                         TIMING_STATS,
                         timingStats,
-                        new MapParams(Collections.singletonMap(ToXContentParams.INCLUDE_CALCULATED_FIELDS, "true")));
+                        new MapParams(Map.of(ToXContentParams.INCLUDE_CALCULATED_FIELDS, "true",
+                                             ToXContentParams.FOR_INTERNAL_STORAGE, "false")));
                 }
                 builder.endObject();
                 return builder;
